--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		
 	</head>
 	<body>
+	<h1 style="text-align:center">Task Manager</h1>
 		<div id="main">
 			<div id="form">
 				    <div id="form_textarea">
